[package]
name = "dsn-traveller"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Florian Jacob <projects+git@florianjacob.de>"]
edition = "2018"

[dependencies]
futures = "0.1"
# tokio = { version = "0.1.18", features = ["async-await-preview"] }
# tokio-async-await = "0.1"
futures-timer = "0.1"
url = "1"
hyper = "0.12"
hyper-tls = "0.3"
http = "0.1"
clap = "2"
petgraph = { version = "0.4", features = ["graphmap", "serde-1"] }
petgraph-graphml = "1"
hostname = "0.1"
rand = "0.6"
matrixgraph = { path = "matrixgraph" }

serde = { version = "1", features = ["derive"] }
url_serde = "0.2"
ron = "0.4"
regex = "1"
lazy_static = "1"

ruma-client = "0.2"
ruma-events = "0.12"
ruma-identifiers = "0.12"

[dependencies.tokio]
git = "https://github.com/tokio-rs/tokio"
branch = "master"
features = ["async-await-preview"]

[dependencies.tokio-async-await]
git = "https://github.com/tokio-rs/tokio"
branch = "master"

[patch.crates-io]
tokio-async-await = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
