[package]
name = "dsn-traveller"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Florian Jacob <projects+git@florianjacob.de>"]
edition = "2018"

[dependencies]
tokio = "0.2.0-alpha.6"
ruma-client = "0.3.0-beta.1"
futures-timer = "0.3"
url = { version = "2", features = ["serde"] }
clap = "2"
petgraph = { version = "0.4", features = ["graphmap", "serde-1"] }
petgraph-graphml = "1"
hostname = "0.1"
rand = "0.7"
matrixgraph = { path = "matrixgraph" }

serde = { version = "1", features = ["derive",] }
ron = "0.5"
regex = "1"
lazy_static = "1"
