[package]
name = "matrixgraph"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Florian Jacob <projects+git@florianjacob.de>"]

[dependencies]
petgraph = { version = "0.4", features = ["graphmap", "serde-1"] }
petgraph-graphml = "1"
rand = "0.5"

serde = "1"
serde_derive = "1"
serde_json = "1"
ron = "0.2"
