[package]
name = "matrixgraph"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Florian Jacob <projects+git@florianjacob.de>"]
edition = "2018"

[dependencies]
petgraph = { version = "0.4", features = ["graphmap", "serde-1"] }
petgraph-graphml = "1"
rand = "0.6"
chrono = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.4"
